# blog

./: .gitignore  .htmltest.yml  Makefile  flake.nix  nixpacks.json  readme.md  workspace.code-workspace
dovydas.xyz/: .gitignore  .pre-commit-config.yaml  Makefile  dovydas.xyz.lektorproject  noxfile.py  pyproject.toml  requirements.txt  tox.ini  website.lektorproject
dovydas.xyz/assets/static/: blog.css  global.css  landing.css  music.css  navbar.css  pygments.css  style.css
dovydas.xyz/configs/: atom.ini
dovydas.xyz/content/: contents.lr  dovydas-gulbinas-resume.html
dovydas.xyz/content/blog/3d-printing-hitomezashi-patterns/: contents.lr
dovydas.xyz/content/blog/adding-arbitrary-attributes-to-python-class/: contents.lr
dovydas.xyz/content/blog/adding-more-features-to-hyperion-in-homeassistant/: contents.lr
dovydas.xyz/content/blog/allow-developers-to-deploy-straight-to-production/: contents.lr
dovydas.xyz/content/blog/concatenate-page-text-in-lektor/: contents.lr
dovydas.xyz/content/blog/control-anything-ssh-with-homeassistants-hassio/: contents.lr
dovydas.xyz/content/blog/creating-a-production-ready-django-app-cont/: contents.lr
dovydas.xyz/content/blog/creating-a-production-ready-django-app-pt-1/: contents.lr
dovydas.xyz/content/blog/creating-multiple-folders-from-a-bash-array/: contents.lr
dovydas.xyz/content/blog/dovydasxyz-is-back-up-and-running/: contents.lr
dovydas.xyz/content/blog/few-lessons-i-learned-after-using-python-fabric-1x/: contents.lr
dovydas.xyz/content/contact-me/: contents.lr
dovydas.xyz/content/music/: contents.lr
dovydas.xyz/content/projects/: contents.lr
dovydas.xyz/content/resume/: contents.lr
dovydas.xyz/databags/: navbar-nav.ini
dovydas.xyz/flowblocks/: text.ini
dovydas.xyz/models/: blog-post.ini  blog.ini  music.ini  page.ini  project.ini  song.ini
dovydas.xyz/templates/: blog-post.html  blog.html  landing.html  layout.html  music.html  page.html  project.html  projects.html  resume.html  song.html
dovydas.xyz/templates/blocks/: text.html
dovydas.xyz/templates/macros/: blog.html  music.html  navbar.html  page-title.html  pagination.html  projects.html  song.html
dovydas.xyz/tests/: conftest.py  ref_test_playwright.py  test_resume_page.py
dovydas.xyz/tests/objects/: abstract_page.py  resume_page.py
dovydas.xyz/workfiles/pixelart/: README.md  blog_icons_16x16.pxo  blog_icons_32x32.pxo
tests/: .prettierrc  (+2 more)
(+47 files in other folders)
